feat(scheduler): delete expired scheduled tasks every day